Fix color contrast of social media links. Close #463

--- a/wdn/templates_4.0/less/layouts/header.less
+++ b/wdn/templates_4.0/less/layouts/header.less
@@ -101,7 +101,7 @@
             .rem(28);
             line-height: 1.5;
             text-decoration: none;
-            color: #5E0000;
+            color: lighten(@brand, 55%);
             text-shadow: none;
             .transition(all linear 0.3s);
 
